// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ItunesStore component renders inline with snapshot 1`] = `
<div
  className="main-wrapper"
>
  <h1>
    iTunes Store Items
  </h1>
  <div
    className="add-item-wrapper"
  >
    <h4
      className="add-item-title"
    >
      Search iTunes and Apple Books Store
    </h4>
    <div
      className="mb-3 input-group"
    >
      <input
        className="form-control"
        name="searchTerm"
        onChange={[Function]}
        placeholder="Enter Search Term"
        value=""
      />
      <input
        className="form-control"
        name="mediaType"
        onChange={[Function]}
        placeholder="Enter Media Type"
        value=""
      />
      <button
        className="btn btn-outline-secondary"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        Search iTunes
      </button>
    </div>
  </div>
  <div
    className="project-items-wrapper"
  />
</div>
`;

exports[`ItunesStore component renders inline with snapshot with data 1`] = `
<div
  className="main-wrapper"
>
  <h1>
    iTunes Store Items
  </h1>
  <div
    className="add-item-wrapper"
  >
    <h4
      className="add-item-title"
    >
      Search iTunes and Apple Books Store
    </h4>
    <div
      className="mb-3 input-group"
    >
      <input
        className="form-control"
        name="searchTerm"
        onChange={[Function]}
        placeholder="Enter Search Term"
        value=""
      />
      <input
        className="form-control"
        name="mediaType"
        onChange={[Function]}
        placeholder="Enter Media Type"
        value=""
      />
      <button
        className="btn btn-outline-secondary"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        Search iTunes
      </button>
    </div>
  </div>
  <div
    className="project-items-wrapper"
  >
    <div>
      <link
        crossOrigin="anonymous"
        href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
        rel="stylesheet"
      />
      <div
        className="container py-5 h-100 card-style card"
      >
        <img
          className="card-img-top"
          src="https://is1-ssl.mzstatic.com/image/thumb/Music115/v4/2b/a9/e0/2ba9e01e-ceaf-adab-e95f-a6661656b2a7/source/100x100bb.jpg"
        />
        <div
          className="card-body"
        >
          <div
            className="card-title h5"
          >
            The Gifted
          </div>
          <div
            className="mb-2 text-muted card-subtitle h6"
          >
            Wale
          </div>
          <p
            className="card-text"
          />
          <div
            className="buttons-wrapper"
          >
            <button
              className="edit-button btn btn-light"
              data-testid="eventTrigger"
              disabled={false}
              id="favourite-button"
              onClick={[Function]}
              type="button"
            >
              Add to favourites
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
